--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>  
 
     <div class="mainForm">
-        <form id = 'addBurger'>
+        <form id = 'mainFormDiv'>
             <p class="mainUsername">Username</p>
             <input type="text" name="addMainUsername">
             <p class="mainPassword">Password</p>
