--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </form>
 
         <div class="mainSignUp">
-            <a href="./login.html">Sign Up</a>
+            <a href="./signup.html">Sign Up</a>
         </div>
 
     </div>
