--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,11 @@
 </head>
 <body>
 
-    <header class="header">Penny Pinchers</header>
+    <header class="headTitle">
+        <h1 class="headApName">Penny Pinchers</h1>
+        <h3 class="headApSlogan">Who's the ultimate saver?</h3>
+    </header>  
+
     <br>
     <div class="main">
         <form class="form">
@@ -23,14 +27,14 @@
             <input type="password" id="pwd" name="pwd"><br><br>
             <label for="pwd2">Reenter your password: </label>
             <input type="password" id="pwd2" name="pwd2"><br><br>
-            <button type="submit">Sign up</button>
+            <button type="submit" class="sBtn">Sign up</button>
         </form>
     </div>
 
     <div class="login">
-        <a href="./index.html"></a>
+        <a href="./index.html" class="index"></a>
     </div>
-    
+
     <script src="https://code.jquery.com/jquery.js"></script>
 </body>
 </html>
