--- a/signup.html
+++ b/signup.html
@@ -17,17 +17,17 @@
     <br>
     <div class="main">
         <form class="form">
-            <label for="fname">First Name: </label>
-            <input type="text" id="fname" name="fname"><br><br>
-            <label for="lname">Last Name: </label>
-            <input type="text" id="lname" name="lname"><br><br>
-            <label for="uname">Choose a user name: </label>
-            <input type="text" id="uname" name="uname"><br><br>
-            <label for="pwd">Choose a password: </label>
-            <input type="password" id="pwd" name="pwd"><br><br>
-            <label for="pwd2">Reenter your password: </label>
-            <input type="password" id="pwd2" name="pwd2"><br><br>
-            <button type="submit" class="sBtn">Sign up</button>
+            <p class="fname">First Name: </p>
+            <input type="text" id="fname" name="fname">
+            <p class="lname">Last Name: </p>
+            <input type="text" id="lname" name="lname">
+            <p class="uname">Choose a user name: </p>
+            <input type="text" id="uname" name="uname">
+            <p class="pwd">Choose a password: </p>
+            <input type="password" id="pwd" name="pwd">
+            <p class="pwd2">Reenter your password: </p>
+            <input type="password" id="pwd2" name="pwd2">
+            <button type="submit" class="subBtn">Sign up</button>
         </form>
     </div>
 
