added setbudget, modified both other html files

--- a/addbill.html
+++ b/addbill.html
@@ -14,8 +14,8 @@
 
     <br>
     <div class="main">
-        <form class="form">
-            <p class="menu-header">Which category would you like to add an expense for?</p>
+        <form class="bill-form">
+            <p class="bill-header">Which category would you like to add an expense for?</p>
             <div class="dropdown">
                 <select class="dropdown-content">
                     <option value="1">Groceries</option>
@@ -28,7 +28,7 @@
             <p class="amount-header">Enter the amount of the expense: </p>
             <input class="amount" type="number" id="amount" name="amount"><br><br>
 
-            <button type="submit" class="addBillBtn">Add Expense</button>
+            <button type="submit" class="addBill-Btn">Add Expense</button>
         </form>
     </div>
 
