--- a/signup.html
+++ b/signup.html
@@ -25,7 +25,7 @@
             <input type="text" id="uname" name="uname">
             <p class="pwd">Choose a password: </p>
             <input type="password" id="pwd" name="pwd">
-            <p class="pwd2">Reenter your password: </p>
+            <p class="pwd2">Re-enter your password: </p>
             <input type="password" id="pwd2" name="pwd2">
             <button type="submit" class="subBtn">Sign up</button>
         </form>
